# stardog-webfunction-plugin

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pom.xml
src/main/java/ai/tegmentum/stardog/kibble/webfunctions/: Aggregate.java  AttributionRing.java  AttributionRow.java  AuditRow.java  AuditSink.java  CacheClear.java  CacheList.java  CacheLoad.java  CacheRefresh.java  Call.java  CallbackContext.java  CalleeComponentLoader.java  CapabilityAsk.java  CapabilityAskParser.java  CapabilityAttributionRing.java  CapabilityAuditRow.java  CapabilityEnforcer.java  CapabilityGrant.java  CapabilityModel.java  CapabilityPolicyResolver.java  (+60 more)
src/test/java/ai/tegmentum/stardog/kibble/: AbstractStardogTest.java  StardogContainer.java  StardogUserProvisioner.java
src/test/resources/integration/: capability-ask-graph-callback.ttl  capability-ask-uppercase-v2.ttl  capability-ask-uppercase.ttl  example_graph_callback_extension.wasm  example_graph_callback_extension_with_ask.wasm  example_sum_aggregate.wasm  example_uppercase_extension.wasm  example_uppercase_extension_with_ask.wasm  example_uppercase_extension_with_ask_v2.wasm
src/test/rust/: Cargo.toml
src/test/rust/aggregate/sum/: Cargo.toml
src/test/rust/aggregate/sum_component/: Cargo.toml
src/test/rust/aggregate/sum_component/src/: lib.rs
src/test/rust/aggregate/sum_component/wit/: webfunction.wit
src/test/rust/function/array_of/: Cargo.toml
src/test/rust/function/concat/: Cargo.toml
src/test/rust/function/const0x1x1/: Cargo.toml
src/test/rust/function/const0x1x2/: Cargo.toml
src/test/rust/function/const0x2x1/: Cargo.toml
src/test/rust/function/const0x2x2/: Cargo.toml
src/test/rust/function/doc_test/: Cargo.toml
src/test/rust/function/echo1x1x1/: Cargo.toml
src/test/rust/function/echo1x2x1/: Cargo.toml
src/test/rust/function/echo2x1x1/: Cargo.toml
src/test/rust/function/echo2x2x1/: Cargo.toml
src/test/rust/function/empty/: Cargo.toml
src/test/rust/function/is_numeric/: Cargo.toml
src/test/rust/function/mapping_dictionary_add/: Cargo.toml
src/test/rust/function/mapping_dictionary_get/: Cargo.toml
src/test/rust/function/multi_var_component/: Cargo.toml
src/test/rust/function/multi_var_component/src/: bindings.rs  lib.rs
src/test/rust/function/multi_var_component/wit/: webfunction.wit
src/test/rust/function/to_upper/: Cargo.toml
src/test/rust/function/to_upper_component/: Cargo.toml
src/test/rust/function/to_upper_component/src/: lib.rs
src/test/rust/function/to_upper_component/wit/: webfunction.wit
(+105 files in other folders)
