[workspace]

# All plugin-internal module-mode fixtures were retired here; the
# component-mode crates (to_upper_component, multi_var_component,
# sum_component) live at webfunctions/crates/example-{uppercase-extension,
# multi-var-filter,sum-aggregate} so the four engine bindings (stardog,
# jena, rdf4j, oxigraph) share one wasm per test surface. This workspace
# is retained as an empty shell so `cargo make build` inside
# src/test/rust/ completes as a no-op — WasmTestSuite.beforeClass still
# shells out to it and any non-zero exit would masquerade as a test
# failure.
members = []

[profile.release]
debug = false
lto = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
