[package]
name = "to_upper_component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Matches the version used by webfunctions reference examples so
# wit-bindgen-rt resolves to one version in the wider workspace.
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }

[package.metadata.component]
package = "tegmentum:webfunction"

# Target the base sparql-extension WIT (submodule at src/main/wit/base).
# Path is relative to this Cargo.toml — up out of
# src/test/rust/function/to_upper_component/, then down into main/wit/base.
[package.metadata.component.target]
path = "../../../../main/wit/base"
world = "sparql-extension"
